passed all tasks

--- a/public/home.html
+++ b/public/home.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container-fluid root">
 
-    <h1 class="h1 text-center">Welcome to the simple <strong>Weather App</strong>!</h1>
+    <h1 class="h1 text-center">Welcome to the simple <strong>Weather App <span id="easter-egg" style="cursor: pointer" onclick="getRandomEmoji()"></span></strong>!</h1>
     <h2>
         Please <a href="/login">Log In</a> to use all functions of this project
     </h2>
@@ -17,6 +17,7 @@
         This is the study project which is created by <a href="mailto: nefimov455@gmail.com">Nikita Efimov</a>
     </footer>
 
+    <script src="landing-page-scripts/easter-egg.js"></script>
 </div>
 </body>
 </html>
