--- a/public/login.html
+++ b/public/login.html
@@ -3,33 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Log In</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="container-fluid root">
+<div class="container-fluid root">
 
 
-    <section >
+    <section>
         <form class="form" method="post" action="/api/login">
             <h1 class="h1 text-center">Please, verify yourself!</h1>
-            <label>
+            <label class="name-field">
                 Name
                 <input class="form-control" type="text" name="username" placeholder="Enter your name" required/>
             </label>
+            <div style="width: 100%; display: flex; align-items: center; flex-direction: column">
+                <span style="width: 70%; text-align: start">Password</span>
+                <label class="password-container">
 
-            <label>
-                Password
-                <input class="form-control" name="password" placeholder="Enter your password" type="password" required/>
-            </label>
+                    <input class="form-control" id="password" name="password" placeholder="Enter your password"
+                           type="password" required/>
+                    <button class="btn btn-outline-primary" type="button" onclick="togglePasswordField()" id="show-button">Show</button>
+                </label>
 
+            </div>
             <input type="submit" class="btn btn-primary" value="Log In">
-
         </form>
 
     </section>
-    </div>
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+<script src="login-page-scripts/password-toggle.js" defer></script>
 </body>
 </html>
