changed style of error message

--- a/public/login.html
+++ b/public/login.html
@@ -26,7 +26,7 @@
                            type="password" required/>
                     <button class="btn btn-outline-primary" type="button" onclick="togglePasswordField()" id="show-button">Show</button>
                 </label>
-                <span class="alert" id="error-text" style="display: none">Wrong data</span>
+                <span class="alert" id="error-text" style="display: none; color: darkred; font-weight: bold">Wrong data</span>
 
             </div>
             <input type="submit" class="btn btn-primary" value="Log In" onclick="logIn(event)"/>
