added user photo

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -15,7 +15,7 @@
     <div class="header">
         <div class="user-info">
 
-            <img alt="user image" class="avatar" src="avatar.jpg" style="margin-right: 20px"/>
+            <img alt="user image" class="avatar" id="avatar" src="avatar.jpg" style="margin-right: 20px; border-radius: 50px"/>
             <h1>
             <span id="name"></span>'s Dasboard page
         </h1>
